- fix filter bug issue - add tooltips and ellipsis for overflowing strings - remove past dates for due-date selection - add Apply and RemoveFilter buttons - add number of days till due date notification

--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -37,3 +37,9 @@ body {
 button:focus {
     border: 1px solid #333;
 }
+
+.text-truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
